# JaxCutlassFFI

./: CMakeLists.txt  README.md  pyproject.toml
src/csrc/: blackwell_group_gemm_block_scaled.cu  blackwell_group_gemm_block_scaled_sm100.cu  blackwell_group_gemm_block_scaled_sm103.cu  kernels.cc  kernels.h  util.h
src/cutlass_ffi/: __init__.py  blackwell.py
test/: tensor.py  test_blackwell_group_gemm_block_scaled.py
