[project]
name = "cutlass_ffi"
description = "Call cutlass kernels with Jax FFI."
requires-python = ">=3.12"
version = "0.0.1"

dependencies = ["jax>=0.6.2", "pytest"]

[build-system]
requires = ["scikit-build-core>=0.11.5", "pybind11", "jax>=0.6.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.20"
build.verbose = true
cmake.build-type = "Release"
cmake.define = { CMAKE_CUDA_ARCHITECTURES = "90;100a;103a" }
